tests/NormalTests/paczka1/fuzzy1/65146245.err
Error in line 2: wAC7EnSkm A475 65,3
Error in line 26: wAC7EnSkm A641 54,1
Error in line 31: vKVdCxftDmo A7q1 162,3
Error in line 39: vKVdCxftDmo A741 232,7
